kubernetes/traefik-cert-manager/nginx/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  ipFamilyPolicy: PreferDualStack
  selector:
    app: nginx
  ports:
    - protocol: TCP
      name: web
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  annotations:
    # Add annotation for Traefik-Mesh to be the router and handle traffic going out/in to your service    
    mesh.traefik.io/traffic-type: "http"
    mesh.traefik.io/retry-attempts: "2"

spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: whoami
