kubernetes/traefik-cert-manager/nginx/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress2
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "traefik"

spec:
  rules:
    - host: nginx.home.techfitsu.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
